caption mobile fix

--- a/static/css/uebersicht.css
+++ b/static/css/uebersicht.css
@@ -264,3 +264,9 @@ font-size: 24px;
 height: 240px;
 }
 }
+@media (max-width: 600px) {
+  .caption-container {
+      padding: 3px 10px;
+      font-size: 12px;
+  }
+}
